# Polymarket-Kalshi-Arbitrage-bot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
bootstrap/: Cargo.toml
bootstrap/src/: main.rs
controller/: Cargo.toml  README.md
controller/src/: discovery.rs  kalshi.rs  lib.rs  main.rs  remote_execution.rs  remote_protocol.rs  remote_trader.rs
controller/tests/: integration_tests.rs  websocket_controller_trader_ping.rs
doc/: 02-installation.md
docs/: DECISIONS.md  REPO_MAP.md
docs/plans/: 2026-01-13-runtime-market-discovery-design.md  2026-01-13-runtime-market-discovery-impl.md  2026-01-14-esports-discovery-design.md  2026-01-14-esports-discovery-impl.md  2026-01-14-tailscale-discovery-impl.md
examples/: esports_test.rs
src/: config.rs  discovery.rs  execution.rs  kalshi.rs  main.rs  polymarket.rs  types.rs
tailscale/: Cargo.toml
tailscale/src/: beacon.rs  config.rs  lib.rs  verify.rs
tailscale/tests/: beacon_integration.rs
tests/: integration_tests.rs
trader/: Cargo.toml  README.md
trader/src/: config.rs  main.rs  trader.rs
trader/src/execution/: dry_run.rs  kalshi.rs  mod.rs  polymarket.rs
