[package]
name = "controller"
version = "2.0.0"
edition = "2021"
description = "Controller: Kalshi-Poly / Poly-Poly / Kalshi-Kalshi arbitrage bot"
license = "MIT OR Apache-2.0"

[lib]
name = "arb_bot"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
base64 = "0.22"
chrono = "0.4"
dotenvy = "0.15"
ethers = { version = "2.0", features = ["legacy"] }
futures-util = "0.3"
governor = "0.6"
hmac = "0.12"
nonzero_ext = "0.3"
pkcs1 = { version = "0.7", features = ["pem"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rsa = { version = "0.9", features = ["sha2"] }
rustc-hash = "2.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha2 = "0.10"
parking_lot = "0.12"
tiny-keccak = { version = "2.0", features = ["keccak"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wide = "0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"

