[package]
name = "tailscale"
version = "0.1.0"
edition = "2021"
description = "Tailscale verification and peer discovery"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["process", "net", "time", "sync"] }
tracing = "0.1"
dirs = "5.0"
toml = "0.8"
