[package]
name = "remote-trader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
dotenvy = "0.15"
ethers = { version = "2.0", features = ["legacy"] }
ethers-core = { version = "2.0", features = ["legacy"] }
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
rsa = { version = "0.9", features = ["sha2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.4"
tailscale = { path = "../tailscale" }
tokio-util = "0.7"

